fix: change test to use book then book id